Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidConstructorInjection1.php
<?php
/** @Service */
class FooClassInvalidConstructorInjection1
{
    /** @Inject({"foo", "bar"}) */
    public function __construct($fooService)
    {
    }
}
